--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+title: Midnight theme
+description: Midnight is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-midnight
-baseurl: "/blog"
-url: "https://drifter-handbook.github.io/DevDiary"
